<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BildungActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_bildung"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txt_grund" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_aus" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_weiter" />
    </RadioGroup>

    <TextView
        android:id="@+id/edt_bildung_schule_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_schule" />

    <EditText
        android:id="@+id/edt_bildung_schule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/edt_bildung_dauer_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_dauer" />

    <EditText
        android:id="@+id/edt_bildung_dauer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/edt_bildung_adresse_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_adresse" />

    <EditText
        android:id="@+id/edt_bildung_adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_bildung_add" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_zu_beruf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickBerufserfahrung"
            android:text="@string/txt_zuruck" />

        <Button
            android:id="@+id/berufserfahrung"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickSkills"
            android:text="@string/txt_skills" />
    </LinearLayout>

</LinearLayout>