<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_startseite"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_send" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_anweisung" />

    <Button
        android:id="@+id/button_erfassen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickErfassen"
        android:text="@string/txt_erfassen" />

</LinearLayout>